--- a/index.html
+++ b/index.html
@@ -1,50 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Learn Quran Everywhere</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f4f4f4;
-      margin: 0;
-      padding: 20px;
-      text-align: center;
-    }
-    .container {
-      background: white;
-      padding: 40px;
-      border-radius: 10px;
-      max-width: 600px;
-      margin: auto;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    h1 {
-      color: #2c3e50;
-    }
-    p {
-      color: #555;
-    }
-    a.button {
-      display: inline-block;
-      margin-top: 20px;
-      padding: 10px 20px;
-      background-color: #27ae60;
-      color: white;
-      text-decoration: none;
-      border-radius: 5px;
-    }
-    a.button:hover {
-      background-color: #219150;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Qaidaha Nurania Lessons</title>
 </head>
-<body>
-  <div class="container">
-    <h1>Learn Quran Everywhere</h1>
-    <p>Teaching the Qur'an from scratch to fluency – anytime, anywhere!</p>
-    <a class="button" href="https://www.youtube.com/@LearnQuranEverywhereYouAre" target="_blank">Visit our YouTube Channel</a>
-  </div>
+<body style="font-family: Arial; background: #f4f4f4; padding: 20px;">
+
+  <h1>Qaidaha Nurania Lessons</h1>
+
+  <h2>Lesson 01</h2>
+  <iframe width="300" height="200" src="https://www.youtube.com/embed/eWpSc3F_mbo" frameborder="0" allowfullscreen></iframe>
+
+  <h2>Lesson 02</h2>
+  <iframe width="300" height="200" src="https://www.youtube.com/embed/MBlgn2cbyxw" frameborder="0" allowfullscreen></iframe>
+
+  <h2>Lesson 03</h2>
+  <iframe width="300" height="200" src="https://www.youtube.com/embed/yDBR3rYM9Eg" frameborder="0" allowfullscreen></iframe>
+
+  <h2>Lesson 04</h2>
+  <iframe width="300" height="200" src="https://www.youtube.com/embed/pfEysWBxWqY" frameborder="0" allowfullscreen></iframe>
+
+  <h2>Lesson 05</h2>
+  <iframe width="300" height="200" src="https://www.youtube.com/embed/Wl-PiH2E0kE" frameborder="0" allowfullscreen></iframe>
+
+  <h2>Lesson 06</h2>
+  <iframe width="300" height="200" src="https://www.youtube.com/embed/jc10XcFZ70U" frameborder="0" allowfullscreen></iframe>
+
+  <h2>Lesson 07</h2>
+  <iframe width="300" height="200" src="https://www.youtube.com/embed/H__q6QLzrXw" frameborder="0" allowfullscreen></iframe>
+
+  <h2>Lesson 08</h2>
+  <iframe width="300" height="200" src="https://www.youtube.com/embed/v-UEL2x_dHU" frameborder="0" allowfullscreen></iframe>
+
 </body>
 </html>
